analytics-service/k8s/analytics-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics
  labels:
    app: analytics-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: shalini1772/analytics-service:0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics
spec:
  selector:
    app: analytics-service
  ports:
    - port: 80
      targetPort: 4000
  type: LoadBalancer
