analytics-service/k8s/analytics-service-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service-green
  namespace: analytics
  labels:
    app: analytics-service
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analytics-service
      version: green
  template:
    metadata:
      labels:
        app: analytics-service
        version: green
    spec:
      containers:
        - name: analytics-service
          image: shalini1772/analytics-service:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service-green
  namespace: analytics
spec:
  selector:
    app: analytics-service
    version: green
  ports:
    - port: 80
      targetPort: 4000
