analytics-service/k8s/analytics-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics
spec:
  type: LoadBalancer
  selector:
    app: analytics-service
    version: blue
  ports:
    - port: 80
      targetPort: 4000
